# pedro-portfolio

./: CNAME  README.md  index.html  main.py  meu_site.html  pyproject.toml  requirements.txt  server.py
rag/: sobre_mim.md
