[project]
name = "ia-do-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.115.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.1",
    "langgraph-checkpoint>=3.0.1",
    "protobuf>=5.29.5",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.32.0",
]
